manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-logs-manager
  namespace: k8s-logs-manager
spec:
  type: ClusterIP
  selector:
    app: k8s-logs-manager
  ports:
    - name: http
      port: 80
      targetPort: 8501
